add some features

--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 <body>
     <h1>Hello</h1>
     <p>home page</p>
+    <p>home page1</p>
+    <p>home page2</p>
+    <p>home page3</p>
 </body>
 </html>
