add some features

--- a/index.html
+++ b/index.html
@@ -11,5 +11,9 @@
     <p>home page1</p>
     <p>home page2</p>
     <p>home page3</p>
+    <p>home page4</p>
+    <p>home page5</p>
+    <p>home page6</p>
+    <p>home page7</p>
 </body>
 </html>
